# reaper

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  build.rs  envoy.yaml  protogen.sh
.do/: app.yaml
.github/workflows/: publishAPI.yml  pushToMaster.yml
api/: Cargo.toml  build.rs  sqlx-data.json
api/src/: lib.rs  main.rs  session_state.rs  startup.rs  utils.rs
api/src/authentication/: middleware.rs
api/src/routes/: login.rs  mod.rs
api/src/routes/dashboard/: logout.rs  mod.rs
api/src/routes/discord/: guilds.rs  mod.rs  user.rs
api/src/routes/payments/: account_client.rs  customer_client.rs  mod.rs  payment.rs  portal_client.rs  prices_client.rs  product_client.rs  subscription_client.rs
configuration/: base.yaml  local.yaml  production.yaml  staging.yaml
deployments/kubernetes/: api.yaml  discord.yaml  ingress.yaml  ingress.yml  ingress_nginx_svc.yaml  kustomization.yaml  scythe.yaml  service.yml  serving.yaml  statefulset.yaml  statefulset.yml  stripe.yaml
deployments/kubernetes/base/: api.yaml  discord.yaml  ingress.yaml  issuer.yaml  scythe.yaml  stripe.yaml
deployments/kubernetes/base/resources/: postgres-values.yaml  pv-claim.yaml
deployments/kubernetes/patches/: certmanager-config.yaml  domain-config.yaml  net-certmanager-install.yaml  network-config.yaml
deployments/kubernetes/resources/: eventing.yaml  issuer.yaml  local-pv.yaml
deployments/tekton/: kustomization.yaml
deployments/tekton/configs/docker/: registry.yaml
deployments/tekton/configs/github/: githubsource.yaml
deployments/tekton/eventing/: tekton-ci-cd-github-source.yaml
deployments/tekton/pipelines/: tekton-argocd-build-deploy.yaml
deployments/tekton/tasks/: argocd-task-create-app.yaml
deployments/tekton/triggers/: rbac.yaml  tekton-argocd-build-deploy-event-listener.yaml  tekton-argocd-build-deploy-trigger-binding.yaml  tekton-argocd-build-deploy-trigger-template.yaml
migrations/: 20220614182143_create_accounts_table.sql  20220615202213_add_status_column.sql  20220621214704_create_subscriptions.sql  20220625200920_create_customer_db.sql  20220625213130_create_guilds_db.sql  20220629195619_add_prod_column.sql  20220709215257_init_tables.sql  20220717203500_add_role_id.sql
payments/: Cargo.toml  build.rs
payments/proto/: customer.proto  payments.proto  portal.proto  prices.proto  product.proto  subscription.proto
payments/src/: customer.rs  lib.rs  main.rs  payments_v1.rs  portal.rs  prices.rs  product.rs
scripts/: deploy.sh  init_db.sh
scythe/: .gitignore  next.config.js  package.json
scythe/config/nginx/: default.conf
scythe/pages/: 404.tsx  _app.tsx  _document.tsx  dashboard.tsx  faq.tsx  index.tsx  login.tsx  oauth.tsx  privacy.tsx  terms.tsx
scythe/pages/account/: settings.tsx
scythe/pages/create/: index.tsx
scythe/pages/dashboard/: index.tsx
scythe/pages/subscribe/: [id].tsx  index.tsx
scythe/pages/subscribe/[server_id]/: index.tsx
scythe/public/: index.html
scythe/src/: App.tsx
scythe/src/auth/: index.tsx
scythe/src/components/Account/: AccountLink.tsx  CreateAccount.tsx  index.ts
scythe/src/components/App/: App.tsx
scythe/src/components/Customer/: form.tsx
scythe/src/components/Footer/: Footer.tsx
scythe/src/components/Header/: Header.tsx
scythe/src/components/Loading/: index.tsx
scythe/src/components/MenuPopover/: index.tsx
scythe/src/components/NavMenu/: index.tsx
scythe/src/components/Payment/: Payment.tsx
scythe/src/components/Product/: Payment.tsx
scythe/src/components/SettingsMenu/: index.tsx
scythe/src/components/Stripe/: CheckoutForm.tsx
scythe/src/components/Subscription/: Card.tsx  SubscriptionCard.tsx  SubscriptionItem.tsx  index.tsx
scythe/src/components/SubscriptionCard/: index.tsx
scythe/src/constants/: misc.ts
scythe/src/hooks/: useToggle.ts
scythe/src/state/: index.ts
scythe/src/state/application/: hooks.ts  reducer.ts  updater.ts
scythe/src/state/authentication/: actions.ts  hooks.ts  reducer.ts  updater.ts  updater.tsx
scythe/src/state/discord/: actions.ts  hooks.ts  reducer.ts  updater.tsx
scythe/src/state/payments/: actions.ts  hooks.ts  reducer.ts  updater.tsx
scythe/src/state/stripe/: action.ts  hooks.ts  reducer.ts
scythe/src/state/user/: actions.ts  hooks.ts  reducer.ts  updater.tsx
scythe/src/theme/: index.tsx  typography.ts
scythe/src/utils/: SnackbarUtils.ts
scythe/styles/: globals.css
shared/: Cargo.toml
shared/src/: configuration.rs  lib.rs  utils.rs
src/: api.rs  client.rs  configuration.rs  lib.rs  main.rs  server.rs  session_state.rs  startup.rs
src/authentication/: middleware.rs  mod.rs
src/routes/: login.rs  mod.rs
src/routes/dashboard/: logout.rs  mod.rs
src/routes/payments/: mod.rs  payment.rs
stripe/: .air.toml  .gitignore  Cargo.toml  README.md  build.rs  go.mod  go.sum
stripe-go/: .air.toml  .gitignore  Makefile  go.mod  go.sum
stripe-go/cmd/discord/: main.go
stripe-go/cmd/stripe-go/: main.go
stripe-go/internal/pkg/callbacks/: callbacks.go  guild.go  ready.go  roles.go
stripe-go/internal/pkg/http/: rpc.go  server.go
stripe-go/proto/: account.pb.go  account.proto  account_grpc.pb.go  customer.pb.go  customer.proto  customer_grpc.pb.go  portal.pb.go  portal.proto  portal_grpc.pb.go  prices.pb.go  prices.proto  prices_grpc.pb.go  product.pb.go  product.proto  product_grpc.pb.go  subscription.pb.go  subscription.proto  subscription_grpc.pb.go
stripe-go/src/: payments_v1.rs
stripe-go/utils/: utils.go
stripe/account/: account.pb.go  account_grpc.pb.go
stripe/customer/: customer.pb.go  customer_grpc.pb.go
stripe/portal/: portal.pb.go  portal_grpc.pb.go
stripe/prices/: prices.pb.go  prices_grpc.pb.go
stripe/product/: product.pb.go  product_grpc.pb.go
stripe/proto/: account.proto  customer.proto  portal.proto  prices.proto  product.proto  subscription.proto
stripe/src/: account.go  customer.go  lib.rs  main.go  payments_v1.rs  portal.go  prices.go  product.go  subscription.go  webhook.go
stripe/subscription/: subscription.pb.go  subscription_grpc.pb.go
stripe/utils/: utils.go
(+9 files in other folders)
