[package]
name = "reaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tonic = { verison = "0.7.1", features = ["tls", "compression"] }
log = "0.4"
prost = "0.10"
prost-types = "0.10"
tonic-web = "0.3.0"

[build-dependencies]
tonic-build = { version = "0.7.0", features = ["prost", "compression"] }