[[bin]]
path = 'src/main.rs'
name = 'api'

[package]
name = 'api'
version = '0.1.0'
edition = '2021'

[lib]
path = 'src/lib.rs'

[dependencies]
async-trait = '0.1.53'
log = '0.4'
prost = '0.10'
prost-types = '0.10'
actix-web = '4.0'
actix-session = { version = "0.6.0", features = ["redis-rs-tls-session"] }
actix-governor = '0.3'
anyhow = '1.0.40'
tracing-actix-web = '0.5'
serde_json = '1.0'
serde-aux = '3'
tracing = '0.1.19'
tracing-bunyan-formatter = '0.3'
tracing-log = '0.1.1'
urlencoding = '2'
thiserror = '1.0.24'
actix-web-lab = '0.15'
base64 = '0.13.0'
tonic = '0.7.2'

[dependencies.reqwest]
version = '0.11.11'
default-features = false
features = [
    'json',
    'rustls-tls',
    'cookies',
]

[dependencies.shared]
path = '../shared'

[dependencies.stripe-server]
path = '../stripe-go'

[dependencies.tokio]
version = '1.18.2'
features = [
    'rt-multi-thread',
    'macros',
    'sync',
    'time',
    'fs',
]

[dependencies.serde]
version = '1.0'
features = [
    'derive',
    'rc',
]

[dependencies.tracing-subscriber]
version = '0.3'
features = [
    'registry',
    'env-filter',
]

[dependencies.clap]
version = '3.1.8'
features = ['derive']

[dependencies.secrecy]
version = '0.8'
features = ['serde']

[dependencies.sqlx]
version = '0.5.5'
default-features = false
features = [
    'runtime-actix-rustls',
    'macros',
    'postgres',
    'uuid',
    'chrono',
    'migrate',
    'offline',
]
