[package]
name = "payments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = '0.9.0'
async-stripe = { version = "0.14", features = ["runtime-tokio-hyper"] }
prost = '0.10'
prost-types = '0.10'
tonic-web = '0.3.0'
serde_json = '1.0'
serde-aux = '3'
tracing = '0.1.19'
tracing-bunyan-formatter = '0.3'
tracing-log = '0.1.1'
shared = { path = "../shared" }