[[bin]]
path = 'src/main.rs'
name = 'payments'

[package]
name = "payments-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = 'src/lib.rs'

[dependencies]
async-trait = "0.1.53"
async-stripe = { version = "0.14", features = ["runtime-tokio-hyper"] }
env_logger = '0.9.0'
prost = "0.10.4"
prost-types = '0.10.1'
tonic-web = '0.3.0'
serde_json = '1.0'
serde-aux = '3'
tracing = '0.1.19'
tracing-bunyan-formatter = '0.3'
tracing-log = '0.1.1'
shared = { path = "../shared" }
anyhow = '1.0.40'
tonic = "0.7.2"
tokio-stream = { version = "0.1.8", features = ["net"] }

[dependencies.tokio]
version = '1.18.2'
features = [
    'rt-multi-thread',
    'macros',
    'sync',
    'time',
    'fs',
]

[build-dependencies.tonic-build]
version = '0.7.2'