[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = '0.10'
prost-types = '0.10'
tonic-web = '0.3.0'
serde_json = '1.0'
serde-aux = '3'
tracing = '0.1.19'
tracing-bunyan-formatter = '0.3'
tracing-log = '0.1.1'

[dependencies.secrecy]
version = '0.8'
features = ['serde']

[dependencies.serde]
version = '1.0'
features = [
    'derive',
    'rc',
]

[dependencies.config]
version = '0.11'
default-features = false
features = ['yaml']

[dependencies.sqlx]
version = '0.5.5'
default-features = false
features = [
    'runtime-actix-rustls',
    'macros',
    'postgres',
    'uuid',
    'chrono',
    'migrate',
    'offline',
]