[package]
name = "stripe-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = 'src/lib.rs'

[dependencies]
prost = "0.10.4"
prost-types = '0.10.1'
shared = { path = "../shared" }
tonic = "0.7.2"
tokio-stream = { version = "0.1.8", features = ["net"] }

[dependencies.serde]
version = '1.0'
features = [
    'derive',
    'rc',
]

[dependencies.tokio]
version = '1.18.2'
features = [
    'rt-multi-thread',
    'macros',
    'sync',
    'time',
    'fs',
]

[build-dependencies.tonic-build]
version = '0.7.2'